--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-272.0.dev <4.0.0'
+  sdk: '>=2.19.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +41,8 @@ dependencies:
   flutter_login: ^4.1.1
   dio: ^5.0.1
   crypto: ^3.0.2
+  loading_animation_widget: ^1.2.0+4
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +55,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   isar_generator: ^3.0.5
-  build_runner: ^2.4.0
+  build_runner: ^2.3.3
   http_mock_adapter: ^0.4.2
 
 # For information on the generic Dart part of this file, see the
