--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   crypto: ^3.0.2
   loading_animation_widget: ^1.2.0+4
   qr_code_scanner: ^1.0.1
+  otp: 3.1.2
 
 dev_dependencies:
   flutter_test:
